testbed.html correction

--- a/online/testbed.html
+++ b/online/testbed.html
@@ -198,7 +198,7 @@ double-clicking on <a href="http://jakub.kotrla.net/putty/putty.exe">putty.exe</
 <div class="outline-text-2" id="text-2">
 
 <p>After logged-in, as we have mentioned, you could run <i>screen -c testbed.screenrc</i>. It launches a GNU Screen session that points you to a
-general <a href="http://testbed.casafx.dyndns.org/testbed/README"><b>README</b></a> file. This file introduce you the deployment as well as give
+general <a href="README.html"><b>README</b></a> file. This file introduce you the deployment as well as give
 you indications about how to "play" it in a secondary screen where an
 interactive shell is loaded. During your playing, <a href="http://shelr.tv/records/5058b52196608010b3000075"><i>Relevant</i></a> command is
 available and is able to remind you which are the interesting files to read.
