Point to google translated pfc

--- a/online/README.html
+++ b/online/README.html
@@ -129,7 +129,7 @@ reading.
 <p>
 The purpose of this virtual machine is to let you test the deployment
 fully described here: http<a>://testbed.casafx.dyndns.org/pfc/DOCUMENTOS/
-(only Spanish).
+(only Spanish, automatic traslation <a href="http://translate.google.es/translate?hl=es&sl=es&tl=en&u=http%3A%2F%2Frawgithub.com%2Ffelixalises%2Fpfc%2Fmaster%2Fpfc%2Findex.html&sandbox=1">here</a>).
 </p>
 <p>
 It was created by me, Félix Alises-Casas, and in its final stage I
